# Wizium

./: .gitignore  README.md  clean.bat
Dictionaries/: Fr_Simple.txt
Projects/VS2015/: Wizium.sln  libWizium.vcxproj
Projects/VS2017/: libWizium.vcxproj
Projects/VS2019/: libWizium.vcxproj
Scripts/: dico_stats.py  paving_stats.py
Sources/: CMakeLists.txt  Engine.cpp  Helper.cpp  Helper.h  libWizium.cpp  libWizium.h  library.Module.cpp  library.Module.h  library.cpp  library.h
Sources/Dictionary/: Dictionary.cpp  Dictionary.h
Sources/Grid/: Box.cpp  Box.h  Grid.cpp  Grid.h
Sources/Solvers/: ISolver.h  SolverDynamic.DynamicItem.cpp  SolverDynamic.DynamicItem.h  SolverDynamic.cpp  SolverDynamic.h  SolverStatic.StaticItem.cpp  SolverStatic.StaticItem.h  SolverStatic.cpp  SolverStatic.h
Wrappers/Python/: libWizium.py  testWizium.py
